refactor synthesisspec